Worked on Overview

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -2,8 +2,10 @@
     --text: #05151a;
     --background: #ffffff;
     --primary: #59C7EB;
+    --primary-dim: #87d3ed;
     --secondary: #A6E1F4;
     --accent: #00A9E0;
+    --accent-light: #1eb5e8;
 
     --normal-weight: 300;
     --bold-weight: 500;
