--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -1,11 +1,20 @@
+.center-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 0 2rem;
+}
+
 .qa-sideflex {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap-reverse;
     justify-content: center;
-    padding: 0 2rem;
 
-    margin-top: 1rem;
+    width: 100%;
+
+    margin: 1rem 0 0 0;
 }
 
 .qa-sideflex > .qa-card {
@@ -55,7 +64,7 @@
     padding: 0;
 }
 
-.qa-answers > * {
+.qa-answers > .qa-answer-btn {
     padding: 1rem;
     text-align: center;
 
@@ -65,10 +74,71 @@
     border-radius: 0;
 }
 
-.qa-answers > *:hover {
+.qa-answers > .qa-answer-btn.selected {
+    background-color: var(--accent);
+    color: var(--secondary);
+}
+
+.qa-answers > .qa-answer-btn:hover {
     background-color: var(--primary);
 }
 
-div.qa-overview {
-    border-top: 2px solid var(--accent);
+.thesis-checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+
+    padding: 0 2rem;
+}
+
+.thesis-checkbox > input[type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    border: 2px solid var(--accent);
+    background-color: var(--secondary);
+    height: 1.5rem;
+    width: 1.5rem;
+
+    margin: 4px 1rem 0 0;
+}
+
+.thesis-checkbox > input[type="checkbox"]:checked ~ .checkmark {
+    background-color: var(--accent);
+}
+
+.thesis-checkbox:hover input ~ .checkmark {
+    background-color: var(--primary-dim);
+}
+
+.thesis-checkbox:hover input:checked ~ .checkmark {
+    background-color: var(--accent-light);
+}
+
+.thesis-overview {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: .5rem;
+}
+
+.thesis-overview > * {
+    margin: 0;
+}
+
+.btn-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+
+    width: 100%;
+}
+
+.space-between {
+    justify-content: space-between;
 }
