Added results page and weights

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     <main>
         <h2>Willkommen bei dem <a href="/about"><%= title %></a>!</h2>
         <p>
-            Dashier ist eine Demo für den Hochschul-O-Mat. Wenn wir uns dafür entscheiden den Wahl-O-Mat
+            Dashier ist eine Demo für den <%= title %>. Wenn wir uns dafür entscheiden den Wahl-O-Mat
             Klon selbst zu entwickeln, dann könnte er so aussehen. Alternativ können wir auch eine
             Open-Source Lösung verwenden. Einige davon sind:
         </p>
@@ -22,9 +22,9 @@
             befindet sich auf <a href="https://wahl.cityofdogs.dev" target="_blank">meinem privaten Server</a>.
         </p>
 
-        <h3>Was ist der Hochschul-O-Mat?</h3>
+        <h3>Was ist der <%= title %>?</h3>
         <p>
-            Der Hochschul-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
+            Der <%= title %> ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
             von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
             zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
             und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
