--- a/views/omat.ejs
+++ b/views/omat.ejs
@@ -45,9 +45,15 @@
                 <small>Wähle eine Antwortmöglichkeit aus:</small>
                 
                 <div class="qa-answers">
-                    <button onclick="answer(1)" class="qa-answer-btn" id="positive">Stimme zu</button>
-                    <button onclick="answer(0)" class="qa-answer-btn" id="neutral">Neutral</button>
-                    <button onclick="answer(-1)" class="qa-answer-btn" id="negative">Stimme nicht zu</button>
+                    <button onclick="answer(1)" class="qa-answer-btn <% if (answers[0] == 1) { %>
+                        selected
+                    <% } %>" id="positive">Stimme zu</button>
+                    <button onclick="answer(0)" class="qa-answer-btn <% if (answers[0] == 0) { %>
+                        selected
+                    <% } %>" id="neutral">Neutral</button>
+                    <button onclick="answer(-1)" class="qa-answer-btn <% if (answers[0] == -1) { %>
+                        selected
+                    <% } %>" id="negative">Stimme nicht zu</button>
                 </div>
                 <button class="link-block" onclick="answer(null)">These überspringen</a>
             </div>
