--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -142,3 +142,12 @@
 .space-between {
     justify-content: space-between;
 }
+
+.percentage {
+    box-sizing: border-box;
+
+    display: block;
+    padding: 1rem;
+    font-weight: var(--bold-weight);
+    background-color: var(--accent);
+}
