--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,20 +5,20 @@
     <title><%= title %> - Über</title>
 </head>
 <body>
-    <%- include('partials/header', { title: "Über den Hochschul-O-Mat" }) %>
+    <%- include('partials/header', { title: "Über den " + title }) %>
     <main>
-        <h1>Was ist der Hochschul-O-Mat?</h1>
+        <h1>Was ist der <%= title %>?</h1>
         <p>
-            Der Hochschul-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
+            Der <%= title %> ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
             von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
             zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
             und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
             Hochschulgruppen am besten zu ihnen passen könnten.
         </p>
 
-        <h2>Wie funktioniert der Hochschul-O-Mat?</h2>
+        <h2>Wie funktioniert der <%= title %>?</h2>
         <p>
-            Der Hochschul-O-Mat funktioniert ähnlich wie der Wahl-O-Mat. Die Nutzer*innen beantworten eine Reihe von Thesen
+            Der <%= title %> funktioniert ähnlich wie der Wahl-O-Mat. Die Nutzer*innen beantworten eine Reihe von Thesen
             mit "Stimme zu", "Neutral" oder "Stimme nicht zu". Die Thesen werden von den Hochschulgruppen selbst formuliert.
             Die Nutzer*innen können sich die Thesen und die Positionen der Hochschulgruppen dazu anschauen und so eine
             informierte Entscheidung treffen. Am Ende werden die Antworten der Nutzer*innen mit den Positionen der
