--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -42,10 +42,31 @@
 .qa-card {
     padding: 1rem;
     background-color: var(--secondary);
+
+    overflow: hidden;
 }
 
-.qa-card .inactive {
-    display: none;
+.qa-card .qa-grid {
+    display: grid;
+}
+
+.qa-card .qa-card-thesis.inactive {
+    z-index: -1;
+    transform: translateY(20%);
+    opacity: 0;
+    transition: opacity .2s ease-in-out, transform 1s ease-in-out;
+}
+
+.qa-card .qa-card-thesis {
+    grid-column: 1;
+    grid-row: 1;
+
+    margin: 0;
+    width: 100%;
+    opacity: 1;
+    transition: opacity .8s ease-in-out, transform .4s ease-in-out;
+
+    overflow: hidden;
 }
 
 .qa-card, .qa-sidebar {
@@ -76,7 +97,6 @@
 
 .qa-answers > .qa-answer-btn.selected {
     background-color: var(--accent);
-    color: var(--secondary);
 }
 
 .qa-answers > .qa-answer-btn:hover {
