--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -42,8 +42,6 @@
 .qa-card {
     padding: 1rem;
     background-color: var(--secondary);
-
-    overflow: hidden;
 }
 
 .qa-card .qa-grid {
@@ -61,12 +59,8 @@
     grid-column: 1;
     grid-row: 1;
 
-    margin: 0;
-    width: 100%;
     opacity: 1;
     transition: opacity .8s ease-in-out, transform .4s ease-in-out;
-
-    overflow: hidden;
 }
 
 .qa-card, .qa-sidebar {
@@ -130,6 +124,14 @@
 
 .thesis-checkbox > input[type="checkbox"]:checked ~ .checkmark {
     background-color: var(--accent);
+}
+
+.thesis-checkbox > input[type="checkbox"]:checked ~ .checkmark::after {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    content: '2x';
 }
 
 .thesis-checkbox:hover input ~ .checkmark {
