--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <div class="banner" role="banner">
         <a href="/"><%= title %></a>
         <a href="/" class="logo-large">
-            <img alt="Universität Konstanz" src="https://www.stuve.uni-konstanz.de/typo3conf/ext/in2template/Resources/Public/Images/logo.svg" width="737" height="283">
+            <img alt="Stuve Konstanz" src="/data/stuve_logo.png" width="737" height="283">
         </a>
     </div>
 </header>
