--- a/views/omat-result.ejs
+++ b/views/omat-result.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('partials/site-head') %>
-    <title><%= title %></title>
+    <title>Wahl-O-Mat Resultat</title>
     <link rel="stylesheet" href="/filehost/css/qacard.css">
 
     <script>
@@ -19,5 +19,6 @@
 
         <div id="output"></div>
     </main>
+    <%- include('partials/footer') %>
 </body>
 </html>
