--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,34 +2,38 @@
 <html lang="en">
 <head>
     <%- include('partials/site-head') %>
-    <title><%= title %></title>
+    <title>Wahl-O-Mat</title>
 </head>
 <body>
     <%- include('partials/header') %>
     <main>
-        <h2>Willkommen bei dem <a href="/about"><%= title %></a>!</h2>
-        <p>
-            Dashier ist eine Demo für den <%= title %>. Wenn wir uns dafür entscheiden den Wahl-O-Mat
-            Klon selbst zu entwickeln, dann könnte er so aussehen. Alternativ können wir auch eine
-            Open-Source Lösung verwenden. Einige davon sind:
-        </p>
-        <ul>
-            <li><a href="https://github.com/msteudtn/Mat-O-Wahl" target="_blank">Mat-O-Wahl</a></li>
-            <li><a href="https://github.com/wahlrechner/wahlrechner" target="_blank">Wahlrechner</a></li>
-        </ul>
-
-        <h3>Was ist der <%= title %>?</h3>
-        <p>
-            Der <%= title %> ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
-            von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
-            zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
-            und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
-            Hochschulgruppen am besten zu ihnen passen könnten.
-        </p>
-
-        <section>
-            <a class="link-block" href="/omat">Los geht's</a>
-        </section>
+        <div class="card">
+            <h2>Willkommen bei dem <a href="/about">Wahl-O-Mat</a>!</h2>
+            <p>
+                Dashier ist eine Demo für den Wahl-O-Mat. Wenn wir uns dafür entscheiden den Wahl-O-Mat
+                Klon selbst zu entwickeln, dann könnte er so aussehen. Alternativ können wir auch eine
+                Open-Source Lösung verwenden. Einige davon sind:
+            </p>
+            <ul>
+                <li><a href="https://github.com/msteudtn/Mat-O-Wahl" target="_blank">Mat-O-Wahl</a></li>
+                <li><a href="https://github.com/wahlrechner/wahlrechner" target="_blank">Wahlrechner</a></li>
+            </ul>
+    
+            <h3>Was ist der Wahl-O-Mat?</h3>
+            <p>
+                Der Wahl-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
+                von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-konstanz.de" target="_blank">Universität Konstanz</a>
+                zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
+                und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
+                Hochschulgruppen am besten zu ihnen passen könnten.
+            </p>
+    
+            <section>
+                <a class="link-block" href="/omat">Los geht's</a>
+            </section>
+        </div>
     </main>
+    
+    <%- include('partials/footer') %>
 </body>
 </html>
