--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,11 @@
+<link rel="stylesheet" href="/filehost/css/header.css">
+<link rel="stylesheet" href="/filehost/css/header-mobile.css">
+
 <header class="site-header">
-    <nav role="navigation">
-        <div>
-            <ul id="nav-main">
-                <li><a href="/">Startseite</a></li>
-                <li><a href="/about">Über</a></li>
-            </ul>
-        </div>
-    </nav>
     <div class="banner" role="banner">
-        <a href="/"><%= title %></a>
-        <a href="/" class="logo-large">
-            <img alt="Stuve Konstanz" src="/data/stuve_logo.png" width="737" height="283">
+        <a href="/">Wahl-O-Mat</a>
+        <a id="header-logo" href="/" class="logo-large">
+            <img id="logo" class="uni-logo" alt="Stuve Konstanz" src="/filehost/images/stuve_logo.png" width="737" height="283">
         </a>
     </div>
 </header>
