--- a/views/partials/site-head.ejs
+++ b/views/partials/site-head.ejs
@@ -1,6 +1,14 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:site_name" content="Pant-o-Mat">
+<meta property="og:site_name" content="Wahl-O-Mat">
+<meta property="og:image" content="/filehost/images/logo.png">
 
-<link rel="stylesheet" href="/filehost/css/root.css">
+<link id="color-mode" rel="stylesheet" href="/filehost/css/root.css">
+<link rel="stylesheet" href="/filehost/css/style.css">
+<link rel="stylesheet" href="/filehost/css/mobile.css">
+<link rel="stylesheet" href="/filehost/css/inputs.css">
+<link rel="stylesheet" href="/filehost/css/inputs-mobile.css">
+<link rel="shortcut icon" href="/filehost/images/favicon64.png" type="image/png">
+
+<script defer src="/filehost/js/color-mode.js"></script>
