--- a/views/omat-overview.ejs
+++ b/views/omat-overview.ejs
@@ -7,6 +7,7 @@
 
     <script>
         const answers = <%- JSON.stringify(answers) %>;
+        let theses = [];
     </script>
     <script src="/filehost/js/omat-overview-logic.js"></script>
 </head>
@@ -17,9 +18,7 @@
             <section class="qa-sidebar">
                 <h4>Alle Thesen</h5>
                 <ul class="qa-theses">
-                    <% for (let i = 0; i < theses.length; i++) { %>
-                        <li><button id="<%= "thesis-link-" + i %>" onclick="edit(<%= i %>)" class="qa-thesis" onclick="setThesisCursor(<%= i %>)">These <%= i + 1 %></button></li>
-                    <% } %>
+                    <!-- Filled by script -->
                 </ul>
             </section>
 
@@ -31,26 +30,10 @@
                     <button onclick="edit()">< Bearbeiten</button>
                     <button onclick="finish()">Ergebnisse ></button>
                 </div>
-                <% for( let i = 0; i < theses.length; i++ ) { %>
-                    <label class="checkbox" for="<%= "thesis-checkbox-" + i %>">
-                        <input type="checkbox" id="<%= "thesis-checkbox-" + i %>" class="qa-thesis-checkbox">
-                        <span class="checkmark"></span>
 
-                        <div class="thesis-overview">
-                            <h3 id="<%= "thesis-title-" + i %>"><%= theses[i].title %></h3>
-                            <p id="<%= "thesis-description-" + i %>"><%= theses[i].description %></p>
-                            <% if (answers[i] === 1) { %>
-                                <small id="<%= "thesis-answer-" + i %>">Stimme zu</small>
-                            <% } else if (answers[i] === 0) { %>
-                                <small id="<%= "thesis-answer-" + i %>">Neutral</small>
-                            <% } else if (answers[i] === -1) { %>
-                                <small id="<%= "thesis-answer-" + i %>">Stimme nicht zu</small>
-                            <% } else { %>
-                                <small id="<%= "thesis-answer-" + i %>">These übersprungen</small>
-                            <% } %>
-                        </div>
-                    </label>
-                <% } %>
+                <div class="qa-chekboxes">
+                    <!-- Filled by script -->
+                </div>
                 <div class="btn-box space-between">
                     <button onclick="edit()">< Bearbeiten</button>
                     <button onclick="finish()">Ergebnisse ></button>
