--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <%- include('partials/site-head') %>
     <title>Wahl-O-Mat - Über</title>
@@ -11,25 +11,24 @@
             <h1>Was ist der Wahl-O-Mat?</h1>
             <p>
                 Der Wahl-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
-                von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
-                zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
+                von den politischen Hochschulgruppen an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
+                zu verschaffen, die bei den anstehenden Uniwahlen für das Studierendenparlament antreten. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
                 und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
                 Hochschulgruppen am besten zu ihnen passen könnten.
             </p>
     
             <h2>Wie funktioniert der Wahl-O-Mat?</h2>
             <p>
-                Der Wahl-O-Mat funktioniert ähnlich wie der Wahl-O-Mat. Die Nutzer*innen beantworten eine Reihe von Thesen
-                mit "Stimme zu", "Neutral" oder "Stimme nicht zu". Die Thesen werden von den Hochschulgruppen selbst formuliert.
-                Die Nutzer*innen können sich die Thesen und die Positionen der Hochschulgruppen dazu anschauen und so eine
-                informierte Entscheidung treffen. Am Ende werden die Antworten der Nutzer*innen mit den Positionen der
-                Hochschulgruppen verglichen und die Nutzer*innen erhalten eine Übersicht, welche Hochschulgruppen am besten
-                zu ihnen passen könnten.
+                Der Wahl-O-Mat der StuVe funktioniert ähnlich wie das Original. Die Nutzer*innen beantworten eine Reihe von Thesen, die vom Wahlausschuss formuliert wurden,
+                mit "Stimme zu", "Neutral" oder "Stimme nicht zu". Nach Beantwortung aller Thesen können die Nutzer*innen die Thesen in einer Übersicht nochmal ansehen und
+                ggf. für eine doppelte Gewichtung markieren.
             </p>
             <p>
-                Zu keinem Zeitpunkt werden die Antworten der Nutzer*innen an einen Server gesendet; Die gesamte Berechnung
-                findet im Browser statt.
+                Anschließend wird ein Ergebnis angezeigt, das die Übereinstimmung der Nutzer*innen mit den Hochschulgruppen zeigt. Es besteht die Möglichkeit sich ausformulierte
+                Antworten der Hochschulgruppen anzusehen und sich so ein genaueres Bild zu machen.
             </p>
+            <p>
+                
         </div>
     </main>
     
