--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <%- include('partials/site-head') %>
     <title>Wahl-O-Mat</title>
@@ -8,26 +8,9 @@
     <%- include('partials/header') %>
     <main>
         <div class="card">
-            <h2>Willkommen bei dem <a href="/about">Wahl-O-Mat</a>!</h2>
-            <p>
-                Dashier ist eine Demo für den Wahl-O-Mat. Wenn wir uns dafür entscheiden den Wahl-O-Mat
-                Klon selbst zu entwickeln, dann könnte er so aussehen. Alternativ können wir auch eine
-                Open-Source Lösung verwenden. Einige davon sind:
-            </p>
-            <ul>
-                <li><a href="https://github.com/msteudtn/Mat-O-Wahl" target="_blank">Mat-O-Wahl</a></li>
-                <li><a href="https://github.com/wahlrechner/wahlrechner" target="_blank">Wahlrechner</a></li>
-            </ul>
-    
-            <h3>Was ist der Wahl-O-Mat?</h3>
-            <p>
-                Der Wahl-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
-                von den Hochschulgruppen und -Gremien an der <a href="https://www.uni-konstanz.de" target="_blank">Universität Konstanz</a>
-                zu verschaffen. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
-                und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
-                Hochschulgruppen am besten zu ihnen passen könnten.
-            </p>
-    
+            <h2>Willkommen bei dem Wahl-O-Mat!</h2>
+            <h3>Uniwahlen 2024</h3>
+
             <section>
                 <a class="link-block" href="/omat">Los geht's</a>
             </section>
