--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <title>Impressum</title>
     <meta property="og:title" content="Impressum">
