--- a/views/omat.ejs
+++ b/views/omat.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <%- include('partials/site-head') %>
     <title>Wahl-O-Mat</title>
@@ -22,7 +22,7 @@
                     <!-- Filled by script -->
                 </ul>
             </section>
-            <div class="qa-card">
+            <div class="qa card">
                 <div class="qa-grid">
                     <!-- Filled by script -->
                 </div>
