--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -1,11 +1,3 @@
-.center-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding: 0 2rem;
-}
-
 .qa-sideflex {
     display: flex;
     flex-direction: row;
@@ -17,12 +9,14 @@
     margin: 1rem 0 0 0;
 }
 
-.qa-sideflex > .qa-card {
+.qa-sideflex > .qa.card {
     flex: 4 1 0;
 }
 
 .qa-sideflex > .qa-sidebar {
     flex: 1 1 0;
+    min-width: 200px;
+    overflow: hidden;
 }
 
 .qa-sidebar ul {
@@ -30,9 +24,22 @@
     padding: 0;
 }
 
+.qa-sidebar .qa-theses {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
 .qa-sidebar .qa-thesis, .qa-sidebar a.qa-thesis {
-    margin: .2rem 0 .2rem 1rem;
+    margin: 0;
+    margin-left: 1rem;
+
     font-weight: var(--bold-weight);
+    text-align: left;
+
+    overflow: hidden;
+    white-space: wrap;
+    text-overflow: ellipsis;
 }
 
 .qa-sidebar .qa-thesis.inactive {
@@ -44,23 +51,18 @@
     background-color: transparent;
 }
 
-.qa-card {
-    padding: 1rem;
-    background-color: var(--secondary);
-}
-
-.qa-card .qa-grid {
+.qa.card .qa-grid {
     display: grid;
 }
 
-.qa-card .qa-card-thesis.inactive {
+.qa.card .qa-card-thesis.inactive {
     z-index: -1;
     transform: translateY(20%);
     opacity: 0;
     transition: opacity .2s ease-in-out, transform 1s ease-in-out;
 }
 
-.qa-card .qa-card-thesis {
+.qa.card .qa-card-thesis {
     grid-column: 1;
     grid-row: 1;
 
@@ -68,7 +70,7 @@
     transition: opacity .8s ease-in-out, transform .4s ease-in-out;
 }
 
-.qa-card, .qa-sidebar {
+.qa.card, .qa-sidebar {
     margin: .5rem;
 }
 
@@ -86,7 +88,6 @@
 
 .qa-answers > .qa-answer-btn, .qa-sidebar .qa-thesis {
     padding: 1rem;
-    text-align: center;
 
     background-color: transparent;
     border: none;
@@ -123,13 +124,4 @@
 
 .space-between {
     justify-content: space-between;
-}
-
-.percentage {
-    box-sizing: border-box;
-
-    display: block;
-    padding: 1rem;
-    font-weight: var(--bold-weight);
-    background-color: var(--accent);
 }
