--- a/assets/css/omat-result.css
+++ b/assets/css/omat-result.css
@@ -11,13 +11,7 @@
     display: flex;
     flex-direction: column;
 
-    max-height: 100%;
-    overflow: hidden;
-    transition: max-height 2s ease-in-out;
-}
-
-#result.loading {
-    max-height: 0;
+    gap: 1rem;
 }
 
 #result > * {
@@ -38,6 +32,7 @@
 div.percentage-container {
     display: flex;
     flex-direction: row;
+    margin: 0;
     gap: 1rem;
     justify-content: space-between;
 }
