--- a/views/datenschutz.ejs
+++ b/views/datenschutz.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>Datenschutzerklärung</title>
     <meta property="og:title" content="Datenschutzerklärung">
-    <meta property="og:description" content="Die Datenschutzerklärung des Engagement-Wegweisers">
+    <meta property="og:description" content="Die Datenschutzerklärung des <%= title %>">
     <%- include('partials/site-head') %>
 </head>
 
