--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,13 +2,13 @@
 <html lang="de">
 <head>
     <%- include('partials/site-head') %>
-    <title>Wahl-O-Mat</title>
+    <title><%= title %> - Startseite</title>
 </head>
 <body>
     <%- include('partials/header') %>
     <main>
         <div class="card">
-            <h2>Willkommen bei dem Wahl-O-Mat!</h2>
+            <h2>Willkommen bei dem <%= title %>!</h2>
             <h3>Uniwahlen 2024</h3>
 
             <section>
