--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>Impressum</title>
     <meta property="og:title" content="Impressum">
-    <meta property="og:description" content="Das Impressum des Engagement-Wegweisers">
+    <meta property="og:description" content="Das Impressum des <%= title %>">
     <%- include('partials/site-head') %>
 </head>
 <body>
