--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <header class="site-header">
     <div class="banner" role="banner">
-        <a href="/">Wahl-O-Mat</a>
+        <a href="/"><%= title %></a>
         <a id="header-logo" href="/" class="logo-large">
             <img id="logo" class="uni-logo" alt="Stuve Konstanz" src="/filehost/images/stuve_logo.png" width="737" height="283">
         </a>
