--- a/views/partials/site-head.ejs
+++ b/views/partials/site-head.ejs
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:site_name" content="Wahl-O-Mat">
+<meta property="og:site_name" content="<%= title %>">
 <meta property="og:image" content="/filehost/images/logo.png">
 
 <link id="color-mode" rel="stylesheet" href="/filehost/css/root.css">
