--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,24 +2,24 @@
 <html lang="de">
 <head>
     <%- include('partials/site-head') %>
-    <title>Wahl-O-Mat - Über</title>
+    <title><%= title %> - Über</title>
 </head>
 <body>
     <%- include('partials/header') %>
     <main>
         <div class="card">
-            <h1>Was ist der Wahl-O-Mat?</h1>
+            <h1>Was ist der <%= title %></h1>
             <p>
-                Der Wahl-O-Mat ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
+                Der <%= title %> ist ein Tool, das Studierenden dabei helfen soll, sich ein Bild
                 von den politischen Hochschulgruppen an der <a href="https://www.uni-kosntanz.de" target="_blank">Universität Konstanz</a>
                 zu verschaffen, die bei den anstehenden Uniwahlen für das Studierendenparlament antreten. Dazu werden die Positionen der Hochschulgruppen zu verschiedenen Themen abgefragt
                 und mit den Antworten der Nutzer*innen verglichen. So können die Nutzer*innen sehen, welche
                 Hochschulgruppen am besten zu ihnen passen könnten.
             </p>
     
-            <h2>Wie funktioniert der Wahl-O-Mat?</h2>
+            <h2>Wie funktioniert der <%= title %>?</h2>
             <p>
-                Der Wahl-O-Mat der StuVe funktioniert ähnlich wie das Original. Die Nutzer*innen beantworten eine Reihe von Thesen, die vom Wahlausschuss formuliert wurden,
+                Der <%= title %> der StuVe funktioniert ähnlich wie das Original. Die Nutzer*innen beantworten eine Reihe von Thesen, die vom Wahlausschuss formuliert wurden,
                 mit "Stimme zu", "Neutral" oder "Stimme nicht zu". Nach Beantwortung aller Thesen können die Nutzer*innen die Thesen in einer Übersicht nochmal ansehen und
                 ggf. für eine doppelte Gewichtung markieren.
             </p>
