--- a/views/omat-result.ejs
+++ b/views/omat-result.ejs
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <%- include('partials/site-head') %>
-    <title>Wahl-O-Mat Resultat</title>
+    <title><%= title %> Resultat</title>
     <link rel="stylesheet" href="/filehost/css/qacard.css">
     <link rel="stylesheet" href="/filehost/css/omat-result.css">
 
@@ -15,7 +15,7 @@
     <%- include('partials/header') %>
     <main>
         <div class="card">
-            <h1>Dein Wahl-O-Mat-Ergebnis</h1>
+            <h1>Dein <%= title %>-Ergebnis</h1>
             <div id="result">
                 <!-- Filled by script -->
             </div>
