Minor change to result page

--- a/views/omat-result.ejs
+++ b/views/omat-result.ejs
@@ -16,6 +16,8 @@
     <main>
         <div class="card">
             <h1>Dein <%= title %>-Ergebnis</h1>
+            Klicke auf die Parteien, um mehr über ihre Positionen zu erfahren.
+
             <div id="result">
                 <!-- Filled by script -->
             </div>
